--- a/index.html
+++ b/index.html
@@ -6,43 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:bold, black, light, italic|Raleway: medium, semi-bold, bold, black, italic" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:bold, black, light, italic" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-    <nav>
-      <ul id="mainNav" class="inline-list">
-        <li class="inline-item">
-          <a href="#">Link</a>
+    <nav class="navbar navbar-toggleable-sm">
+      <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#menuWrapper" aria-controls="menuWrapper" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <ul class="inline-list social-icons">
+        <li class="inline-item linkedin">
+          <a href="#" title="Link to MK's Linkedin profile"></a>
         </li>
-        <li class="inline-item">
-          <a href="#">Link</a>
-        </li>
-        <li class="inline-item">
-          <a href="#">Link</a>
-        </li>
-        <li class="inline-item">
-          <a href="#">Link</a>
+        <li class="inline-item github">
+          <a href="#" title="Link to MK's Github profile"></a>
         </li>
       </ul>
 
-      <ul class="inline-list social-icons">
-        <li class="inline-item">
-          <a href="#">Link</a>
-        </li>
-        <li class="inline-item">
-          <a href="#">Link</a>
-        </li>
-      </ul>
-    </nav><!-- ./nav -->
+      <div class="collapse navbar-collapse" id="menuWrapper">
+        <ul id="mainNav" class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <div class="container-fluid">
       <div class="row homepage-slide">
-        <div class="col-12">
-          <h1 class="intro">Hi, my name is Mary-Kate.</h1>
+        <div class="homepage-content col-12 col-md-6 offset-md-6">
+          <h1 class="intro">Hi, my name is Mary-Kate. I build <span class="text-green">beautiful</span> &amp; <span class="text-green">functional</span> web solutions for small businesses and non-profits.</h1>
+
+          <h2 class="tesla">This is Tesla. He &quot;helps&quot;.</h2>
         </div>
       </div><!-- ./homepage slide -->
 
@@ -51,70 +57,90 @@
       </div>
 
       <div class="row services-slide">
-        <div class="col-12 service">
-          <div class="service-icon">Icon - Image Tag</div>
+        <div class="col-12 col-md-4 service">
+          <div class="service-icon"><img src="images/code.png" alt="Service: Web Design"></div>
           <div class="service-body">
             <h3>Design</h3>
-            <p>Lorem Ispum dolor.</p>
+            <p>Every website starts fresh, allowing your content and needs to dictate the direction of the design.</p>
           </div>
         </div>
 
-        <div class="col-12 service">
-          <div class="service-icon">Icon - Image Tag</div>
+        <div class="col-12 col-md-4 service">
+          <div class="service-icon"><img src="images/devices.png" alt="Service: Responsive Design"></div>
           <div class="service-body">
             <h3>Responsive</h3>
-            <p>Lorem Ispum dolor.</p>
+            <p>Responsive web design and development means your project will look great across all devices.</p>
           </div>
         </div>
 
-        <div class="col-12 service">
-          <div class="service-icon">Icon - Image Tag</div>
+        <div class="col-12 col-md-4 service">
+          <div class="service-icon"><img src="images/database.png" alt="Service: Web Application Development"></div>
           <div class="service-body">
             <h3>Development</h3>
-            <p>Lorem Ispum dolor.</p>
+            <p>The project mandates the technology, ensuring the most accurate realization of your ideas.</p>
           </div>
         </div>
       </div><!-- ./services slide -->
 
       <div class="row projects-slide">
-        <div class="col-12 project medium-brown">
-          <div class="project-icon">Icon - Image Tag</div>
-          <div class="project-body">
-            <h4>North Country Ministry</h4>
-            <p class="tag text-green">Web Development</p>
-          </div>
+        <div class="col-12 col-md-4 col-xl-3 project medium-brown">
+          <a href="#">
+            <div class="project-icon"><img src="images/code.png" alt="Service: Web Design"></div>
+            <div class="project-body">
+              <h4 class="text-grey">North Country Ministry</h4>
+              <p class="tag text-green">Web Development</p>
+            </div>
+          </a>
         </div>
 
-        <div class="col-12 project dark-brown">
-          <div class="project-icon">Icon - Image Tag</div>
-          <div class="project-body">
-            <h4 class="text-light-brown">St. Lawrence University</h4>
-            <p class="tag">Web Design / Responsive Development</p>
-          </div>
+        <div class="col-12 col-md-4 col-xl-3 project dark-brown">
+          <a href="#">
+            <div class="project-icon"><img src="images/code.png" alt="Service: Web Design"></div>
+            <div class="project-body">
+              <h4 class="text-light-brown">St. Lawrence University</h4>
+              <p class="tag text-grey">Web Design / Responsive Development</p>
+            </div>
+          </a>
         </div>
 
-        <div class="col-12 project">
-          <div class="project-icon">Icon - Image Tag</div>
-          <div class="project-body">
-            <h4 class="text-green">Frank Murken Products</h4>
-            <p class="tag text-dark-brown">Web Development</p>
-          </div>
+        <div class="col-12 col-md-4 col-xl-3 project">
+          <a href="#">
+            <div class="project-icon"><img src="images/code.png" alt="Service: Web Design"></div>
+            <div class="project-body">
+              <h4 class="text-green">Frank Murken Products</h4>
+              <p class="tag text-dark-brown">Web Development</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="hidden-lg-down col-xl-3 project medium-brown">
+          <a href="#">
+            <div class="project-icon"><img src="images/code.png" alt="Service: Web Design"></div>
+            <div class="project-body">
+              <h4 class="text-grey">Saratoga Emergency Physicians</h4>
+              <p class="tag text-green">Application Development</p>
+            </div>
+          </a>
         </div>
       </div><!-- ./projects slide -->
 
-      <div class="row about-slide green">
-        <div class="col-12">
-          <p>Lorem ipsum dolor</p>
+      <div class="row about-slide green text-light-brown">
+        <div class="col-12 col-md-5 push-md-5 offset-md-1 profile-image-wrapper">
+          <div class="profile-image">
+            <img src="images/code.png" alt="Service: Web Design">
+          </div>
         </div>
 
-        <div class="col-12">
-          Picture - Image Tag
+        <div class="col-12 col-md-5 pull-md-5 profile">
+          <p>I learned HTML when I was ten years old. I recieved a degree in the design and development of web applications when I was twenty-two. Now, I am the web developer for St. Lawrence University by day and a freelancer at night.</p>
+          <p>I believe the web should be beautiful, intuitive and fucntional, and that the project should dictate the technology, not the other way around.</p>
         </div>
       </div><!-- ./about slide -->
 
       <div class="row contact-slide">
-        <div class="col-12">
+        <div class="col-12 col-md-8 offset-md-2">
           <h2 class="text-dark-brown">Have a project in mind? Get in touch.</h2>
+          <p>Fill out the Project Form below with some details.<br>Please allow me a couple of business days to respond.</p>
         </div>
       </div><!-- ./contact slide -->
 
@@ -124,11 +150,11 @@
         </div>
         <div class="col-6">
           <ul class="inline-list social-icons">
-            <li class="inline-item">
-              <a href="#">Link</a>
+            <li class="inline-item linkedin">
+              <a href="#" title="Link to MK's Linkedin profile"></a>
             </li>
-            <li class="inline-item">
-              <a href="#">Link</a>
+            <li class="inline-item github">
+              <a href="#" title="Link to MK's Github profile"></a>
             </li>
           </ul>
         </div>
