Add project images for the modal windows and style.

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                     <div class="col-12 tag">Drupal</div>
                   </div>
                   <p>This is a simple Client Managment System designed and implemented in Drupal. Initially, this was designed to only track donors and their donations but was extended through multiple iterations. The system now can track donor and volunteer information, export CSVs to be used in mail-merge mailing lists and generate a variety of reports based on different criteria, including a year-end cumulative donation report.</p>
-                  <a href="#" role="button" class="btn btn-green disabled">Demo Coming Soon</a>
+                  <a href="#" role="button" class="btn btn-green disabled">Demo Coming Fall 2017</a>
                 </div>
                 <div class="col-12 col-md-7 pull-md-5 col-lg-6 pull-lg-6 project-image">
-                  Some Image
+                  <img src="images/ncm-screen.jpg" alt="screengrab of NCM Donation Database">
                 </div>
               </div>
             </div>
@@ -227,7 +227,7 @@
                   <a href="http://www.stlawu.edu/" role="button" class="btn btn-green">Launch University Website</a>
                 </div>
                 <div class="col-12 col-md-7 pull-md-5 col-lg-6 pull-lg-6 project-image">
-                  Some Image
+                  <img src="images/slu-screen.jpg" alt="screengrab of SLU and SLU magazine websites">
                 </div>
               </div>
             </div>
@@ -257,7 +257,7 @@
                   <a href="http://fmproducts.com/" role="button" class="btn btn-green">Launch Website</a>
                 </div>
                 <div class="col-12 col-md-7 pull-md-5 col-lg-6 pull-lg-6 project-image">
-                  Some Image
+                  <img src="images/fmp-screen.jpg" alt="screengrab of FMP website">
                 </div>
               </div>
             </div>
