Add profile image and styles.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="row about-slide green text-light-brown">
         <div class="col-12 col-md-5 push-md-5 offset-md-1 profile-image-wrapper">
           <div class="profile-image">
-            <img src="images/code.png" alt="Service: Web Design">
+            <img src="images/mk-profile.jpg" alt="Mary-Kate Carr">
           </div>
         </div>
 
