Add arrow SVG and animations for the home slide.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
 
     <div id="home" class="container-fluid">
       <div class="row homepage-slide">
-        <div class="homepage-content col-12 col-md-6 offset-md-6">
+        <div class="homepage-content col-10 offset-1 col-md-6 offset-md-6">
           <h1 class="intro">Hi, my name is Mary-Kate. I build <span class="text-green">beautiful</span> &amp; <span class="text-green">functional</span> web solutions for small businesses and non-profits.</h1>
 
           <h2 class="tesla">This is Tesla. He &quot;helps&quot;.</h2>
+
+          <svg id="arrow" x="0px" y="0px" viewBox="0 0 559 306">
+            <path id="arrow-path" d="M521,36c0,0,16-2,13,12c0,0-227,308-481,129l62,104c0,0,3,18-17,12L12,143c0,0-4-7,0-8c0,0-5-16,11-17
+            c0,0,57,3,118-14c0,0,16,0,8,16c0,0-32,15-109,17C40,137,228,370,521,36z"/>
+          </svg>
         </div>
       </div><!-- ./homepage slide -->
 
