--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div id="home" class="container-fluid">
       <div class="row homepage-slide">
-        <div class="homepage-content col-10 offset-1 col-md-6 offset-md-6">
+        <div class="homepage-content col-10 offset-1 col-md-6 offset-md-5">
           <h1 class="intro">Hi, my name is Mary-Kate. I build <span class="text-green">beautiful</span> &amp; <span class="text-green">functional</span> web solutions for small businesses and non-profits.</h1>
 
           <h2 class="tesla">This is Tesla. He &quot;helps&quot;.</h2>
@@ -68,7 +68,7 @@
         <div class="col-12"></div>
       </div>
 
-      <div class="row services-slide">
+      <div class="row services-slide light-brown">
         <div class="col-12 col-md-4 service">
           <div class="service-icon"><img src="images/code.png" alt="Service: Web Design"></div>
           <div class="service-body">
@@ -115,7 +115,7 @@
           </a>
         </div>
 
-        <div class="col-12 col-md-4 col-xl-3 project">
+        <div class="col-12 col-md-4 col-xl-3 project light-brown">
           <a data-toggle="modal" href="#fmpModal">
             <div class="project-icon"><img src="images/fmp.png" alt="Service: Web Design"></div>
             <div class="project-body">
@@ -149,7 +149,7 @@
         </div>
       </div><!-- ./about slide -->
 
-      <div id="contact" class="row contact-slide">
+      <div id="contact" class="row contact-slide light-brown">
         <div class="col-12 col-md-8 offset-md-2">
           <h2 class="text-dark-brown">Have a project in mind? Get in touch.</h2>
           <p>Fill out the Project Form below with some details.<br>Please allow me a couple of business days to respond.</p>
