Minor tweaks to content and styles.

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
       </button>
       <ul class="inline-list social-icons">
         <li class="inline-item linkedin">
-          <a href="#" title="Link to MK's Linkedin profile"></a>
+          <a href="https://www.linkedin.com/in/marykatecarr/" title="Link to MK's Linkedin profile"></a>
         </li>
         <li class="inline-item github">
-          <a href="#" title="Link to MK's Github profile"></a>
+          <a href="https://github.com/mkcarr" title="Link to MK's Github profile"></a>
         </li>
       </ul>
 
       <div class="collapse navbar-collapse" id="menuWrapper">
         <ul id="mainNav" class="navbar-nav">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" onclick="scrollToAnchor('home')">Home</a>
           </li>
           <li class="nav-item">
@@ -57,7 +57,7 @@
         <div class="homepage-content col-10 offset-1 col-md-6 offset-md-5">
           <h1 class="intro">Hi, my name is Mary-Kate. I build <span class="text-green">beautiful</span> &amp; <span class="text-green">functional</span> web solutions for small businesses and non-profits.</h1>
 
-          <h2 class="tesla">This is Tesla. He &quot;helps&quot;.</h2>
+          <h2 class="tesla">This is Tesla. He &quot;helps.&quot;</h2>
 
           <svg id="arrow" x="0px" y="0px" viewBox="0 0 559 306">
             <path id="arrow-path" d="M521,36c0,0,16-2,13,12c0,0-227,308-481,129l62,104c0,0,3,18-17,12L12,143c0,0-4-7,0-8c0,0-5-16,11-17
@@ -131,7 +131,7 @@
           <a data-toggle="modal" href="#sepModal">
             <div class="project-icon"><img src="images/sep.png" alt="Service: Web Design"></div>
             <div class="project-body">
-              <h4 class="text-grey">Saratoga Physician Services</h4>
+              <h4 class="text-grey">Optimum Physician Services</h4>
               <p class="tag text-green">MS Access Application</p>
             </div>
           </a>
@@ -146,18 +146,19 @@
         </div>
 
         <div class="col-12 col-md-5 pull-md-5 profile">
-          <p>I learned HTML when I was ten years old. I recieved a degree in the design and development of web applications when I was twenty-two. Now, I am the web developer for St. Lawrence University by day and a freelancer at night.</p>
-          <p>I believe the web should be beautiful, intuitive and functional, and that the project should dictate the technology, not the other way around.</p>
+          <p>I’ve loved web design and computerized graphic art since I was a kid. I learned HTML when I was ten and would spend hours designing for fun. I received my bachelor’s degree in Digital Arts and Science, with a minor in Computer Science, from Clarkson University and was fortunate to be able to turn my passion into a career. Now, I am the web developer for St. Lawrence University by day and a freelance developer at night (and on the weekends!).</p>
+
+          <p>I believe the web should be beautiful, intuitive and highly functional. I think the project should dictate the choice of technology, not the other way around.</p>
         </div>
       </div><!-- ./about slide -->
 
       <div id="contact" class="row contact-slide light-brown">
         <div class="col-12 col-md-8 offset-md-2">
           <h2 class="text-dark-brown">Have a project in mind? Get in touch.</h2>
-          <p>Fill out the Project Form below with some details.<br>Please allow me a couple of business days to respond.</p>
+          <p>Fill out the Project Form below with some details.</p>
         </div>
         <div class="col-12">
-          Wufoo Contact Form
+          Contact Form
         </div>
       </div><!-- ./contact slide -->
 
@@ -168,10 +169,10 @@
         <div class="col-6">
           <ul class="inline-list social-icons">
             <li class="inline-item linkedin">
-              <a href="#" title="Link to MK's Linkedin profile"></a>
+              <a href="https://www.linkedin.com/in/marykatecarr/" title="Link to MK's Linkedin profile"></a>
             </li>
             <li class="inline-item github">
-              <a href="#" title="Link to MK's Github profile"></a>
+              <a href="https://github.com/mkcarr" title="Link to MK's Github profile"></a>
             </li>
           </ul>
         </div>
@@ -285,7 +286,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-12 project-description">
-                  <h5 class="modal-title" id="sepModalLabel">Saratoga Emergency Physicians: Medical Claims Processing Database</h5>
+                  <h5 class="modal-title" id="sepModalLabel">Optimum Physician Services: Medical Claims Processing Database</h5>
                   <div class="row">
                     <div class="col-12 tag">MS Access Development</div>
                   </div>
