--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:bold, black, light, italic" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="css/styles.css">
 
     <link rel="icon" href="images/favicon.ico">
@@ -21,24 +23,13 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-toggleable-sm">
-      <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#menuWrapper" aria-controls="menuWrapper" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar fixed-top navbar-expand-md justify-content-between">
+      <h1 class="navbar-brand">Mary-Kate Carr</h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <ul class="inline-list social-icons">
-        <li class="inline-item linkedin">
-          <a href="https://www.linkedin.com/in/marykatecarr/" title="Link to MK's Linkedin profile"></a>
-        </li>
-        <li class="inline-item github">
-          <a href="https://github.com/mkcarr" title="Link to MK's Github profile"></a>
-        </li>
-      </ul>
-
-      <div class="collapse navbar-collapse" id="menuWrapper">
-        <ul id="mainNav" class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" onclick="scrollToAnchor('home')">Home</a>
-          </li>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" onclick="scrollToAnchor('projects')">Projects</a>
           </li>
@@ -54,127 +45,125 @@
 
     <div id="home" class="container-fluid">
       <div class="row homepage-slide">
-        <div class="homepage-content col-10 offset-1 col-md-6 offset-md-5">
-          <h1 class="intro">Hi, my name is Mary-Kate. I build <span class="text-green">beautiful</span> &amp; <span class="text-green">functional</span> web solutions for small businesses and non-profits.</h1>
-
-          <h2 class="tesla">This is Tesla. He &quot;helps.&quot;</h2>
-
-          <svg id="arrow" x="0px" y="0px" viewBox="0 0 559 306">
-            <path id="arrow-path" d="M521,36c0,0,16-2,13,12c0,0-227,308-481,129l62,104c0,0,3,18-17,12L12,143c0,0-4-7,0-8c0,0-5-16,11-17
-            c0,0,57,3,118-14c0,0,16,0,8,16c0,0-32,15-109,17C40,137,228,370,521,36z"/>
-          </svg>
+        <div class="homepage-content col-12">
+          <h2>Design<br>&amp; Development</h2>
         </div>
       </div><!-- ./homepage slide -->
 
-      <div class="row services-background green">
-        <div class="col-12"></div>
-      </div>
-
-      <div class="row services-slide light-brown">
-        <div class="col-12 col-md-4 service">
-          <div class="service-icon"><img src="images/code.png" alt="Service: Web Design"></div>
-          <div class="service-body">
-            <h3>Design</h3>
-            <p>Every website starts fresh, allowing your content and needs to dictate the direction of the design.</p>
-          </div>
-        </div>
-
-        <div class="col-12 col-md-4 service">
-          <div class="service-icon"><img src="images/devices.png" alt="Service: Responsive Design"></div>
-          <div class="service-body">
-            <h3>Responsive</h3>
-            <p>Responsive web design and development means your project will look great across all devices.</p>
-          </div>
-        </div>
-
-        <div class="col-12 col-md-4 service">
-          <div class="service-icon"><img src="images/database.png" alt="Service: Web Application Development"></div>
-          <div class="service-body">
-            <h3>Development</h3>
-            <p>The project mandates the technology, ensuring the most accurate realization of your ideas.</p>
-          </div>
-        </div>
-      </div><!-- ./services slide -->
-
       <div id="projects" class="row projects-slide">
-        <div class="col-12 col-md-4 col-xl-3 project medium-brown">
-          <a data-toggle="modal" href="#ncmModal">
-            <div class="project-icon"><img src="images/ncm.png" alt="Service: Web Design"></div>
+        <h2 class="sr-only">Work Examples</h2>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 project">
+          <a data-toggle="modal" href="">
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
             <div class="project-body">
-              <h4 class="text-grey">North Country Ministry</h4>
-              <p class="tag text-green">Web Development</p>
+              <h3>The Shattered Kingdoms</h3>
+              <p>Web Design &amp; Development</p>
             </div>
           </a>
         </div>
 
-        <div class="col-12 col-md-4 col-xl-3 project dark-brown">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 project">
           <a data-toggle="modal" href="#sluModal">
-            <div class="project-icon"><img src="images/slu.png" alt="Service: Web Design"></div>
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
             <div class="project-body">
-              <h4 class="text-light-brown">St. Lawrence University</h4>
-              <p class="tag text-grey">Web Design / Responsive Development</p>
+              <h3>St. Lawrence University</h3>
+              <p>Drupal Design &amp; Development</p>
             </div>
           </a>
         </div>
 
-        <div class="col-12 col-md-4 col-xl-3 project light-brown">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 project">
+          <a data-toggle="modal" href="#ncmModal">
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
+            <div class="project-body">
+              <h3>North Country Ministry</h3>
+              <p>Web Application Development</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 project">
+          <a data-toggle="modal" href="">
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
+            <div class="project-body">
+              <h3>Teaching Africa</h3>
+              <p>WordPress Design &amp; Development</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 project">
+          <a data-toggle="modal" href="">
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
+            <div class="project-body">
+              <h3>North Country Ministry</h3>
+              <p>Web Design &amp; Development</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 project">
+          <a data-toggle="modal" href="">
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
+            <div class="project-body">
+              <h3>Thoroughbred Retirement Foundation</h3>
+              <p>Graphic &amp; Print Design</p>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-none d-lg-block project">
           <a data-toggle="modal" href="#fmpModal">
-            <div class="project-icon"><img src="images/fmp.png" alt="Service: Web Design"></div>
+            <div class="project-icon"><img src="images/ncm.png" alt=""></div>
             <div class="project-body">
-              <h4 class="text-green">Frank Murken Products</h4>
-              <p class="tag text-dark-brown">Web Development</p>
+              <h3>Frank Murken Products</h3>
+              <p>WordPress Consultant</p>
             </div>
           </a>
         </div>
 
-        <div class="hidden-lg-down col-xl-3 project medium-brown">
-          <a data-toggle="modal" href="#sepModal">
-            <div class="project-icon"><img src="images/sep.png" alt="Service: Web Design"></div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-none d-lg-block project disabled">
+          <a class="disabled">
+            <div class="project-icon"><img src="" alt=""></div>
             <div class="project-body">
-              <h4 class="text-grey">Optimum Physician Services</h4>
-              <p class="tag text-green">MS Access Application</p>
             </div>
           </a>
         </div>
+
       </div><!-- ./projects slide -->
 
-      <div id="about" class="row about-slide green text-light-brown">
-        <div class="col-12 col-md-5 push-md-5 offset-md-1 profile-image-wrapper">
-          <div class="profile-image">
-            <img src="images/mk-profile.jpg" alt="Mary-Kate Carr">
-          </div>
+      <div id="about" class="row about-slide">
+        <h2 class="sr-only">About Me</h2>
+        <div class="col-12 col-md-5 push-md-5 offset-md-1">
+          
         </div>
 
-        <div class="col-12 col-md-5 pull-md-5 profile">
-          <p>I’ve loved web design and computerized graphic art since I was a kid. I learned HTML when I was ten and would spend hours designing for fun. I received my bachelor’s degree in Digital Arts and Science, with a minor in Computer Science, from Clarkson University and was fortunate to be able to turn my passion into a career. Now, I am the web developer for St. Lawrence University by day and a freelance developer at night (and on the weekends!).</p>
-
+        <div class="col-12 col-md-5 pull-md-5">
           <p>I believe the web should be beautiful, intuitive and highly functional. I think the project should dictate the choice of technology, not the other way around.</p>
         </div>
       </div><!-- ./about slide -->
 
-      <div id="contact" class="row contact-slide light-brown">
-        <div class="col-12 col-md-8 offset-md-2">
-          <h2 class="text-dark-brown">Have a project in mind? Get in touch.</h2>
-          <p>Fill out the Project Form below with some details.</p>
-        </div>
+      <div id="contact" class="row contact-slide">
+        <h2 class="sr-only">Contact Me</h2>
         <div class="col-12">
-          Contact Form
+          <h2>Want to connect?</h2>
+          <p>Contact me via email or follow me on social.</p>
+        </div>
+        <div class="col-12 social-icons">
+          <p class="sr-only">Links open a new tab.</p>
+          <a href="mailto:marykate.carr13@gmail.com"><i class="fa fa-envelope"></i></a>
+          <a href="https://github.com/little13wolf" target="_blank"><i class="fa fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/marykatecarr/" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
       </div><!-- ./contact slide -->
 
-      <footer class="row dark-brown text-light-brown">
-        <div class="col-6 copyright">
-          <p>Copyright Mary-Kate Carr 2017</p>
+      <footer class="row">
+        <div class="col-sm-6 col-md-3 copyright">
+          <p>&copy; Mary-Kate Carr 2018</p>
         </div>
-        <div class="col-6">
-          <ul class="inline-list social-icons">
-            <li class="inline-item linkedin">
-              <a href="https://www.linkedin.com/in/marykatecarr/" title="Link to MK's Linkedin profile"></a>
-            </li>
-            <li class="inline-item github">
-              <a href="https://github.com/mkcarr" title="Link to MK's Github profile"></a>
-            </li>
-          </ul>
+        <div class="col-sm-6 col-md-9 credit">
+          <p>The beautiful landing image came from the wonderful photographers over at <a href="https://unsplash.com/" target="_blank">Unsplash</a>.</p>
         </div>
       </footer><!-- ./footer row -->
 
@@ -273,38 +262,12 @@
         </div>
       </div>
     </div>
-
-    <div class="modal fade" id="sepModal" tabindex="-1" role="dialog" aria-labelledby="sepModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-12 project-description">
-                  <h5 class="modal-title" id="sepModalLabel">Optimum Physician Services: Medical Claims Processing Database</h5>
-                  <div class="row">
-                    <div class="col-12 tag">MS Access Development</div>
-                  </div>
-                  <p>Working closely with OPSC and their client, Saratoga Emergency Physicians P.C., this project was born out of the need for a user-friendly solution to expedite the review of electronic medical records and processing of insurance claims information. Developed in Microsoft Access, this project utilizes user-friendly forms and SQL queries to interact with multiple databases containing protected health information</p>
-                  <p><em>Due to the sensitive nature of electronic medical records I cannot post an image or a link for this project.</em></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <!-- End Modals -->
 
     <!-- Javascript -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script>
       function scrollToAnchor(aid){
